Fix slider thumb style on Firefox

--- a/src/cs16.css
+++ b/src/cs16.css
@@ -414,7 +414,8 @@ body {
       var(--border-dark);
   }
 
-  input::-webkit-slider-thumb {
+  input::-webkit-slider-thumb,
+  input::-moz-range-thumb {
     -webkit-appearance: none;
     appearance: none;
     width: 8px;
@@ -425,6 +426,7 @@ body {
     box-sizing: border-box;
     border-color: var(--border-light) var(--border-dark) var(--border-dark)
       var(--border-light);
+    border-radius: 0;
   }
 
   label {
